fix: arrow on mobile sort

--- a/src/pages/Collection/components/SortOrders/styles.module.scss
+++ b/src/pages/Collection/components/SortOrders/styles.module.scss
@@ -97,6 +97,28 @@
 .sortButtonAsc,
 .sortButtonDesc {
   width: 100%;
+
+  span {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+  }
+
+  p {
+    display: none;
+  }
+}
+
+.rotate {
+  svg {
+    transform: rotate(-180deg);
+  }
+}
+
+.sortButtonDesc {
+  span > svg {
+    transform: rotate(-180deg);
+  }
 }
 
 .sortButtonAsc {
